@@ -6718,6 +6718,10 @@ DWARF trampolines marked via DW_AT_trampoline are supported by this.
 When issuing a @code{backtrace}, if @code{skip-trampoline-functions} is set,
 @value{GDBN} will skip trampoline frames while printing the stack.
 
+When issuing a @code{finish} or @code{reverse-finish}, if
+@code{skip-trampoline-functions} is set, @value{GDBN} will skip trampoline
+frames while returning from the target function.
+
 Currently, only DWARF trampolines marked via DW_AT_trampoline are supported by
 this.
 
